meta for index updated
yeah that is that

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   <meta content="Personalized feedback in your online meetings. An essential tool for digital first workplaces."
     property="og:description">
   <meta
-    content="https://assets-global.website-files.com/623ca68edd1e7fcbf0efec7d/626a64ba7b1b9932d0970ea0_Preview%20image.jpg"
+    content="https://cdn.jsdelivr.net/gh/thanksduck/Sem-6@main/minor/Quiz%20App%20Master/meta.png"
     property="og:image">
   <meta content="TalkTutor is a Communication Coach" property="twitter:title">
   <meta content="Personalized feedback in your online meetings. An essential tool for digital first workplaces."
     property="twitter:description">
-  <meta
+<!--   <meta
     content="https://assets-global.website-files.com/623ca68edd1e7fcbf0efec7d/626a64ba7b1b9932d0970ea0_Preview%20image.jpg"
-    property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+    property="twitter:image"> -->
+<!--   <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card"> -->
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="https://assets-global.website-files.com/623ca68edd1e7fcbf0efec7d/css/poised-staging.94529d27b.min.css"
     rel="stylesheet" type="text/css">
