--- a/Quiz module/game.html
+++ b/Quiz module/game.html
@@ -340,7 +340,7 @@
 <div>
   
 </div>
-  <div class="container" style="border-style: solid;">
+  <div class="container" >
     <div id="loader"></div>
     <div id="game" class="justify-center flex-column hidden">
       <div id="hud">
