home tab redirect to main home page

--- a/Quiz module/highscores.html
+++ b/Quiz module/highscores.html
@@ -275,7 +275,7 @@
                   </nav>
               </div>
           </div>
-          <div class="nav-buttons mob-menu"><a href="/" class="login-btn mob-btn w-inline-block">
+          <div class="nav-buttons mob-menu"><a href="/login.html" class="login-btn mob-btn w-inline-block">
                   <div>Log in</div>
               </a><a href="/" class="try-btn w-inline-block">
                   <div>Try TalkTutor</div>
@@ -339,7 +339,7 @@
     <h1 id="finalScore">High Scores</h1>
     
     <ol id="highScoresList"></ol>
-    <a class="button footer w-button" href="index.html" style="margin-top: 20px; margin-left: 30px;">Go Home</a>
+    <a class="button footer w-button" href="/index.html" style="margin-top: 20px; margin-left: 30px;">Go Home</a>
   </div>
 </div>
 <script src="highscores.js"></script>
