--- a/email.html
+++ b/email.html
@@ -108,7 +108,7 @@ body .transition {display: block}
                                             </div>
                                         </div>
                                         
-                                        <div class="w-full md:w-1/3 px-4 mb-8">
+                                        <div class="w-full md:w-1/3 px-4 mb-8 gap 20px">
                                             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                                                 <img src="shivam.png"  alt="Developer 1"  style=" background-color: beige; border: 3px solid rgb(98,82,216); border-radius: 10px; width: 370px">
 
