hover easeout added

--- a/about.html
+++ b/about.html
@@ -89,6 +89,7 @@ body .transition {display: block}
                             
      <style>                          .hover-scale:hover {
                            transform: scale(1.4);
+       transistion : transform 150 ease-in-out;
       }
                               </style>
                             
