--- a/about.html
+++ b/about.html
@@ -97,9 +97,9 @@ body .transition {display: block}
                                 <main class="max-[1446px]  py-8 " style="margin-top: 100px; ;">
                                     <!-- <h2 class="text-2xl font-bold mb-4">Our Team</h2> -->
                                     <div class="flex flex-wrap mx-4 w-[1080px] " style="margin-left: 200px;">
-                                        <div class="w-full md:w-1/3 px-4 mb-8">
+                                        <div class="w-full md:w-1/3 class="hover-scale" px-4 mb-8">
                                             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                                                <img src="srv 3 back removed.png" alt="Developer 1"  class="hover-scale" class="" style=" background-color: beige; border: 3px solid rgb(98,82,216); border-radius: 10px; width: 370px ;">
+                                                <img src="srv 3 back removed.png" alt="Developer 1"  style=" background-color: beige; border: 3px solid rgb(98,82,216); border-radius: 10px; width: 370px ;">
 
                                                 <div class="p-4">
                                                     <h3 class="text-2xl font-bold  mb-2" >Sourav Dubey</h3>
@@ -111,7 +111,7 @@ body .transition {display: block}
                                         
                                         <div class="w-full md:w-1/3 px-4 mb-8">
                                             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                                                <img src="shivam.png"  alt="Developer 1"   class="hover-scale" style=" background-color: beige; border: 3px solid rgb(98,82,216); border-radius: 10px; width: 370px">
+                                                <img src="shivam.png"  alt="Developer 1"    style=" background-color: beige; border: 3px solid rgb(98,82,216); border-radius: 10px; width: 370px">
 
                                                 <div class="p-4">
                                                     <h3 class="font-bold  text-2xl mb-2">Shivam Shukla</h3>
@@ -122,7 +122,7 @@ body .transition {display: block}
                                         </div>
                                         <div class="w-full md:w-1/3 px-4 mb-8">
                                             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                                                <img src="vivek.png" alt="Developer 1"   class="hover-scale" style=" background-color: beige; border: 3px solid rgb(98,82,216); border-radius: 10px; width: 370px">
+                                                <img src="vivek.png" alt="Developer 1"   style=" background-color: beige; border: 3px solid rgb(98,82,216); border-radius: 10px; width: 370px">
 
                                                 <div class="p-4">
                                                     <h3 class="text-2xl font-bold  mb-2" >Vivek Thakur</h3>
